preserve java 12 preview syntax and test var restrictions