@@ -10,11 +10,12 @@ package net.jrodolfo.java_evolution.java12;
  * </p>
  *
  * <p>
- * Java 12 previewed switch expressions to solve those problems. They let
- * {@code switch} produce a value directly and introduced arrow labels for
- * safer branch syntax. Switch expressions became final later, in Java 14. This
- * project compiles on JDK 26, so the example uses the final syntax while
- * documenting that Java 12 was the first preview release.
+ * Java 12 previewed switch expressions to solve those problems. Its first
+ * preview included value-bearing {@code break}; Java 13 replaced that form
+ * with {@code yield}, and Java 14 finalized switch expressions. The runnable
+ * method uses the current syntax so it can compile on JDK 26, while
+ * {@link #firstPreviewSource()} preserves the historically important Java 12
+ * form as source text.
  * </p>
  */
 public class SwitchExpressionPreviewExamples {
@@ -31,5 +32,22 @@ public class SwitchExpressionPreviewExamples {
 			case 6, 7 -> "weekend";
 			default -> "unknown";
 		};
+	}
+
+	/**
+	 * Returns a minimal source example of the Java 12 first-preview form.
+	 *
+	 * <p>The text is intentionally not compiled by the main build: a modern
+	 * compiler cannot use {@code --release 12 --enable-preview} to compile a
+	 * preview feature from an older JDK release.</p>
+	 *
+	 * @return Java 12 switch-expression source using value-bearing {@code break}
+	 */
+	public String firstPreviewSource() {
+		return "String result = switch (dayNumber) {\n"
+				+ "    case 1, 2, 3, 4, 5: break \"weekday\";\n"
+				+ "    case 6, 7: break \"weekend\";\n"
+				+ "    default: break \"unknown\";\n"
+				+ "};";
 	}
 }
